--- a/src/app/account/account/account.component.html
+++ b/src/app/account/account/account.component.html
@@ -1,5 +1,5 @@
 <div id="sub-menu" class="account" style="color: white">
-  <div id="header" routerLink="/" class="page-header bottom-separator">
+  <div id="header" (click)="goToView('home')" class="page-header bottom-separator">
     <span class="back-icon">&#x3008;</span>Back
   </div>
 
