--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -31,6 +31,7 @@
     height: 60px;
     padding: 10px 0 0 20px;
 
+    a { cursor: pointer; }
     .logo { height: 35px; }
   }
 
@@ -52,6 +53,7 @@
     height: 60px;
     padding: 10px 20px 0 0;
 
+    a { cursor: pointer; }
     .gear { width: 35px; }
   }
 }
