Fix styling bugs in firefox build

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -29,8 +29,8 @@
   </div>
 
   <div (click)="goToView('app-web-rtc')" class="switch-row highlighted clickable bottom-separator" *ngIf="isFirefox">
-    <div class="label half">WebRTC Leak Prevention</div>
-    <div class="switch half">
+    <div class="label more-than-half">WebRTC Leak Prevention</div>
+    <div class="switch less-than-half">
       {{ffWebRTCType}}
       <span class="forward-icon">&#x3009;</span>
     </div>
