--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -664,7 +664,7 @@
     > .list {
       flex: 1 1 auto; // stretch
       padding: 10px 0;
-      overflow-y: overlay;
+      overflow-y: auto;
       &::-webkit-scrollbar-thumb {
         background: rgba(80,255,255,0.175);
         &:hover { background: rgba(80,255,255,0.3); }
