--- a/src/app/settings/proxy-mode/proxy-mode.component.html
+++ b/src/app/settings/proxy-mode/proxy-mode.component.html
@@ -1,6 +1,13 @@
-<div id="sub-menu">
-  <div id="header" (click)="goToView('app-settings')" class="page-header bottom-separator">
-    <span class="back-icon">&#x3008;</span>Proxy Mode
+<div class="page">
+  <div class="page-banner">
+    <div class="back" (click)="goToView('app-settings')">
+      <i class="fa fa-angle-left"></i>
+    </div>
+
+    <span>Proxy Mode</span>
+
+    <div class="back">
+    </div>
   </div>
 
   <!-- Smart Routing -->
