--- a/src/app/account/account/account.component.scss
+++ b/src/app/account/account/account.component.scss
@@ -65,7 +65,7 @@
       min-height: 44px;
       display: flex;
       align-items: center;
-      justify-content: space-between;;
+      justify-content: space-between;
       font-size: 16px;
       position: relative;
       color: rgba(255, 255, 255, 0.75);
