--- a/src/app/settings/user-agent/user-agent.component.scss
+++ b/src/app/settings/user-agent/user-agent.component.scss
@@ -1,19 +1,64 @@
-@import '~bourbon/app/assets/stylesheets/_bourbon';
-@import '~bourbon-neat/app/assets/stylesheets/_neat';
-@import '../../../scss/variables';
+.page {
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  background: #133;
+  display: flex;
+  flex-direction: column;
+  &:before {
+    left: auto;
+    right: 0;
+    background: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25) 7px, transparent);
+  }
+
+  .page-banner {
+    height: 85px;
+    background-color: #091518;
+    flex: 0 0 auto;
+    text-align: center;
+    width: 100%;
+    font-size: 20px;
+    font-weight: 400;
+    padding-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+
+    .back {
+      align-self: stretch;
+      font-size: 28px;
+      width: 2em;
+      margin: 0;
+      height: auto;
+      flex: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      opacity: 0.6;
+
+    }
+
+    span { flex: 0 1 100%; }
+  }
+}
 
 .option {
-  height: 40px;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.75);
   cursor: pointer;
-  background-color: $primary-bg-light;
-
-  &:hover, &.checked:hover { background-color: darken($primary-bg-light, 5%); }
+  padding: 10px 0;
+  background-color: rgba(255, 255, 255, 0.16);
+  &.bottom-separator { border-bottom: 1px solid rgba(255, 255, 255, 0.25); }
+  &:hover {
+    background: linear-gradient(to left, rgba(255, 255, 255, 0.1), transparent);
+  }
 
   .selected {
     width: 50px;
     height: 100%;
     display: inline-block;
+    vertical-align: middle;
 
     .circle {
       width: 20px;
@@ -22,23 +67,21 @@
       border-radius: 50px;
       margin: auto;
       position: relative;
-      top: 50%;
-      transform: translateY(-50%);
       &.checked { background-color: #b39542; }
     }
   }
 
   .text {
     display: inline-block;
-    width: 230px;
+    width: 235px;
     height: 100%;
     text-align: left;
-    vertical-align: top;
-
-    .label {
-      font-size: 16px;
-      line-height: 1;
-      padding: 10px 0 0;
+    vertical-align: middle;
+    .label { font-size: 14px; }
+    .desc {
+      font-size: 10.5px;
+      line-height: 1.5;
+      opacity: 0.5;
     }
   }
 }
