Add overlays across most pages

--- a/src/app/account/share/share.component.html
+++ b/src/app/account/share/share.component.html
@@ -1,3 +1,5 @@
+<div class="overlay"></div>
+
 <div class="share">
   <div class="share-banner">
     <div class="back" (click)="goToView('app-account')">
