--- a/src/app/account/account/account.component.scss
+++ b/src/app/account/account/account.component.scss
@@ -1,4 +1,17 @@
 @import '../../../scss/variables';
+
+.overlay {
+  position: absolute;
+  z-index: 3;
+  left: auto;
+  right: 0;
+  top: 0;
+  width: 80px;
+  height: 100%;
+  pointer-events: none;
+  background: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25) 7px, transparent);
+}
+
 .account {
   width: 100%;
   height: 100%;
