--- a/src/app/account/share/share.component.scss
+++ b/src/app/account/share/share.component.scss
@@ -1,3 +1,15 @@
+.overlay {
+  position: absolute;
+  z-index: 3;
+  left: auto;
+  right: 0;
+  top: 0;
+  width: 80px;
+  height: 100%;
+  pointer-events: none;
+  background: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25) 7px, transparent);
+}
+
 .share {
   width: 100%;
   height: 100%;
@@ -37,7 +49,7 @@
       justify-content: center;
       cursor: pointer;
       opacity: 0.6;
-      
+
     }
 
     span { flex: 0 1 100%; }
