--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -20,14 +20,20 @@
   &.slide-left { transform: translateX(-290px); }
 
   .overlay {
-    display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    z-index: 25;
+    background: #000;
+    visibility: hidden;
+    pointer-events: none;
+    opacity: 0;
+    transition: all 0.5s ease-in;
     &.show {
-      display: block;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      z-index: 5;
+      visibility: visible;
+      opacity: 0.35;
+      pointer-events: auto;
     }
   }
 }
