--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -1,3 +1,14 @@
+.overlay {
+  position: absolute;
+  z-index: 3;
+  left: 0;
+  top: 0;
+  width: 80px;
+  height: 100%;
+  pointer-events: none;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25) 7px, transparent);
+}
+
 .settings {
   width: 100%;
   height: 100%;
