--- a/src/app/settings/user-agent/user-agent.component.html
+++ b/src/app/settings/user-agent/user-agent.component.html
@@ -1,3 +1,5 @@
+<div class="overlay"></div>
+
 <div class="page">
   <div class="page-banner">
     <div class="back" (click)="goToView('app-settings')">
