--- a/src/app/settings/privacy-filter/privacy-filter.component.scss
+++ b/src/app/settings/privacy-filter/privacy-filter.component.scss
@@ -62,6 +62,10 @@
   font-size: 16px;
   background-color: rgba(255, 255, 255, 0.16);
   &.bottom-separator { border-bottom: 1px solid rgba(255, 255, 255, 0.25); }
+  &:hover {
+    color: rgba(255, 255, 255, 1);
+    background-image: linear-gradient(to left, rgba(255, 255, 255, 0.1), transparent);
+  }
 
   .label {
     float: left;
