--- a/src/app/settings/web-rtc/web-rtc.component.scss
+++ b/src/app/settings/web-rtc/web-rtc.component.scss
@@ -69,7 +69,8 @@
   background-color: rgba(255, 255, 255, 0.16);
   &.bottom-separator { border-bottom: 1px solid rgba(255, 255, 255, 0.25); }
   &:hover {
-    background: linear-gradient(to left, rgba(255, 255, 255, 0.1), transparent);
+    color: rgba(255, 255, 255, 1);
+    background-image: linear-gradient(to left, rgba(255, 255, 255, 0.1), transparent);
   }
 
   .selected {
