--- a/src/app/settings/privacy-filter/privacy-filter.component.scss
+++ b/src/app/settings/privacy-filter/privacy-filter.component.scss
@@ -55,16 +55,22 @@
   }
 }
 
+.pane { background: rgba(255, 255, 255, 0.16); }
+
 .option {
   color: rgba(255, 255, 255, 0.75);
   cursor: pointer;
   padding: 10px;
   font-size: 16px;
-  background-color: rgba(255, 255, 255, 0.16);
+  overflow: auto;
   &.bottom-separator { border-bottom: 1px solid rgba(255, 255, 255, 0.25); }
   &:hover {
     color: rgba(255, 255, 255, 1);
     background-image: linear-gradient(to left, rgba(255, 255, 255, 0.1), transparent);
+  }
+  &.active { background: rgba(255, 255, 255, 0.1); }
+  &.active:hover {
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3) 1px, transparent 1px), linear-gradient(to left, rgba(255, 255, 255, 0.1), transparent);
   }
 
   .label {
