--- a/src/app/settings/proxy-mode/proxy-mode.component.scss
+++ b/src/app/settings/proxy-mode/proxy-mode.component.scss
@@ -55,15 +55,20 @@
   }
 }
 
+.pane { background: rgba(255, 255, 255, 0.16); }
+
 .option {
   color: rgba(255, 255, 255, 0.75);
   cursor: pointer;
   padding: 10px 0;
-  background-color: rgba(255, 255, 255, 0.16);
   &.bottom-separator { border-bottom: 1px solid rgba(255, 255, 255, 0.25); }
   &:hover {
     color: rgba(255, 255, 255, 1);
     background-image: linear-gradient(to left, rgba(255, 255, 255, 0.1), transparent);
+  }
+  &.active { background: rgba(255, 255, 255, 0.1); }
+  &.active:hover {
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3) 1px, transparent 1px), linear-gradient(to left, rgba(255, 255, 255, 0.1), transparent);
   }
 
   .selected {
