--- a/src/app/settings/web-rtc/web-rtc.component.html
+++ b/src/app/settings/web-rtc/web-rtc.component.html
@@ -17,87 +17,89 @@
     Activating webrtc leak protection may cause Skype, Google Hangouts, and other video call services from working
   </div>
 
-  <!-- Default -->
-  <div class="option bottom-separator" (click)="setWebRTCIPHandlingPolicy('DEFAULT')" *ngIf="!isFirefox">
-    <div class="selected">
-      <div class="circle" [ngClass]="{'checked': webRtcLeakProtection === 'DEFAULT'}">
-        <div class="circle-inner"></div>
+  <div class="pane">
+    <!-- Default -->
+    <div class="option bottom-separator" (click)="setWebRTCIPHandlingPolicy('DEFAULT')" *ngIf="!isFirefox" [ngClass]="{'active': webRtcLeakProtection === 'DEFAULT'}">
+      <div class="selected">
+        <div class="circle" [ngClass]="{'checked': webRtcLeakProtection === 'DEFAULT'}">
+          <div class="circle-inner"></div>
+        </div>
+      </div>
+
+      <div class="text">
+        <div class="label">Unprotected</div>
+        <div class="desc">WebRTC has the right to enumerate all interfaces and bind them to discover public interfaces.</div>
       </div>
     </div>
 
-    <div class="text">
-      <div class="label">Unprotected</div>
-      <div class="desc">WebRTC has the right to enumerate all interfaces and bind them to discover public interfaces.</div>
-    </div>
-  </div>
+    <!-- Fastest Server -->
+    <div class="option bottom-separator" (click)="setWebRTCIPHandlingPolicy('DEFAULT_PUBLIC_INTERFACE_ONLY')" *ngIf="!isFirefox" [ngClass]="{'active': webRtcLeakProtection === 'DEFAULT_PUBLIC_INTERFACE_ONLY'}">
+      <div class="selected">
+        <div class="circle" [ngClass]="{'checked': webRtcLeakProtection === 'DEFAULT_PUBLIC_INTERFACE_ONLY'}">
+          <div class="circle-inner"></div>
+        </div>
+      </div>
 
-  <!-- Fastest Server -->
-  <div class="option bottom-separator" (click)="setWebRTCIPHandlingPolicy('DEFAULT_PUBLIC_INTERFACE_ONLY')" *ngIf="!isFirefox">
-    <div class="selected">
-      <div class="circle" [ngClass]="{'checked': webRtcLeakProtection === 'DEFAULT_PUBLIC_INTERFACE_ONLY'}">
-        <div class="circle-inner"></div>
+      <div class="text">
+        <div class="label">Default Public Interface Only</div>
+        <div class="desc">Sends WebRTC traffic via the default public network adapter. This will be the VPN adapter for system-VPN users. WebRTC should only use the default route used by http.</div>
       </div>
     </div>
 
-    <div class="text">
-      <div class="label">Default Public Interface Only</div>
-      <div class="desc">Sends WebRTC traffic via the default public network adapter. This will be the VPN adapter for system-VPN users. WebRTC should only use the default route used by http.</div>
-    </div>
-  </div>
+    <!-- Specific Country -->
+    <div class="option bottom-separator" (click)="setWebRTCIPHandlingPolicy('DEFAULT_PUBLIC_AND_PRIVATE_INTERFACES')" *ngIf="!isFirefox" [ngClass]="{'active': webRtcLeakProtection === 'DEFAULT_PUBLIC_AND_PRIVATE_INTERFACES'}">
+      <div class="selected">
+        <div class="circle" [ngClass]="{'checked': webRtcLeakProtection === 'DEFAULT_PUBLIC_AND_PRIVATE_INTERFACES'}">
+          <div class="circle-inner"></div>
+        </div>
+      </div>
 
-  <!-- Specific Country -->
-  <div class="option bottom-separator" (click)="setWebRTCIPHandlingPolicy('DEFAULT_PUBLIC_AND_PRIVATE_INTERFACES')" *ngIf="!isFirefox">
-    <div class="selected">
-      <div class="circle" [ngClass]="{'checked': webRtcLeakProtection === 'DEFAULT_PUBLIC_AND_PRIVATE_INTERFACES'}">
-        <div class="circle-inner"></div>
+      <div class="text">
+        <div class="label">Default Public And Private Interfaces</div>
+        <div class="desc">Same as Default Public Interface Only, except allowing WebRTC traffic through the default private interface to your local network as well.</div>
       </div>
     </div>
 
-    <div class="text">
-      <div class="label">Default Public And Private Interfaces</div>
-      <div class="desc">Same as Default Public Interface Only, except allowing WebRTC traffic through the default private interface to your local network as well.</div>
-    </div>
-  </div>
+    <!-- Do Not Proxy -->
+    <div class="option" (click)="setWebRTCIPHandlingPolicy('DISABLE_NON_PROXIED_UDP')" *ngIf="!isFirefox" [ngClass]="{'active': webRtcLeakProtection === 'DISABLE_NON_PROXIED_UDP'}">
+      <div class="selected">
+        <div class="circle" [ngClass]="{'checked': webRtcLeakProtection === 'DISABLE_NON_PROXIED_UDP'}">
+          <div class="circle-inner"></div>
+        </div>
+      </div>
 
-  <!-- Do Not Proxy -->
-  <div class="option" (click)="setWebRTCIPHandlingPolicy('DISABLE_NON_PROXIED_UDP')" *ngIf="!isFirefox">
-    <div class="selected">
-      <div class="circle" [ngClass]="{'checked': webRtcLeakProtection === 'DISABLE_NON_PROXIED_UDP'}">
-        <div class="circle-inner"></div>
+      <div class="text">
+        <div class="label">Disable Non Proxied UDP</div>
+        <div class="desc">Disables non-proxied UDP and forces proxy. This policy forces the use of a proxy, and only allows WebRTC traffic over UDP proxies. This will effectively disable WebRTC communication for most users (depending on UDP proxy usage).</div>
       </div>
     </div>
 
-    <div class="text">
-      <div class="label">Disable Non Proxied UDP</div>
-      <div class="desc">Disables non-proxied UDP and forces proxy. This policy forces the use of a proxy, and only allows WebRTC traffic over UDP proxies. This will effectively disable WebRTC communication for most users (depending on UDP proxy usage).</div>
-    </div>
-  </div>
+    <!-- Specific Country -->
+    <div class="option bottom-separator" (click)="setFFWebRTCIPHandlingPolicy(false)" *ngIf="isFirefox" [ngClass]="{'active': ffWebRtcLeakProtection === false}">
+      <div class="selected">
+        <div class="circle" [ngClass]="{'checked': ffWebRtcLeakProtection === false}">
+          <div class="circle-inner"></div>
+        </div>
+      </div>
 
-  <!-- Specific Country -->
-  <div class="option bottom-separator" (click)="setFFWebRTCIPHandlingPolicy(false)" *ngIf="isFirefox">
-    <div class="selected">
-      <div class="circle" [ngClass]="{'checked': ffWebRtcLeakProtection === false}">
-        <div class="circle-inner"></div>
+      <div class="text">
+        <div class="label">Unprotected</div>
+        <div class="desc">WebRTC has the right to enumerate all interfaces and bind them to discover public interfaces.</div>
       </div>
     </div>
 
-    <div class="text">
-      <div class="label">Unprotected</div>
-      <div class="desc">WebRTC has the right to enumerate all interfaces and bind them to discover public interfaces.</div>
-    </div>
-  </div>
-
-  <!-- Do Not Proxy -->
-  <div class="option" (click)="setFFWebRTCIPHandlingPolicy(true)" *ngIf="isFirefox">
-    <div class="selected">
-      <div class="circle" [ngClass]="{'checked': ffWebRtcLeakProtection === true}">
-        <div class="circle-inner"></div>
+    <!-- Do Not Proxy -->
+    <div class="option" (click)="setFFWebRTCIPHandlingPolicy(true)" *ngIf="isFirefox">
+      <div class="selected" [ngClass]="{'active': ffWebRtcLeakProtection === true}">
+        <div class="circle" [ngClass]="{'checked': ffWebRtcLeakProtection === true}">
+          <div class="circle-inner"></div>
+        </div>
       </div>
-    </div>
 
-    <div class="text">
-      <div class="label">Disable Non Proxied UDP</div>
-      <div class="desc">Disables non-proxied UDP and forces proxy. This policy forces the use of a proxy, and only allows WebRTC traffic over UDP proxies. This will effectively disable WebRTC communication for most users (depending on UDP proxy usage).</div>
+      <div class="text">
+        <div class="label">Disable Non Proxied UDP</div>
+        <div class="desc">Disables non-proxied UDP and forces proxy. This policy forces the use of a proxy, and only allows WebRTC traffic over UDP proxies. This will effectively disable WebRTC communication for most users (depending on UDP proxy usage).</div>
+      </div>
     </div>
   </div>
 </div>
