--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -510,7 +510,7 @@
     }
 
     &::after {
-      content: '\f021';
+      content: '\f054';
       font-family: FontAwesome;
       margin-left: 10px;
       border-radius: 100px;
@@ -522,7 +522,7 @@
       width: 40px;
       height: 40px;
       background: linear-gradient(to right, rgba(0,0,0,0.25), transparent 50%);
-      font-size: 16px;
+      font-size: 1em;
       color: rgba(200,255,255,0.75);
       transition: color 0.2s;
     }
