--- a/src/app/account/account/account.component.html
+++ b/src/app/account/account/account.component.html
@@ -40,7 +40,7 @@
         <div class="icon page">Share Cypherpunk with a friend</div>
       </div>
 
-      <div class="setting bottom-separator" (click)="open('https://support.cypherpunk.com/hc/request/new')">
+      <div class="setting bottom-separator" (click)="open('https://cypherpunk.com/support/request/new')">
         <div class="icon external">
           <div>
             Open a Support Ticket
@@ -49,7 +49,7 @@
         </div>
       </div>
 
-      <div class="setting bottom-separator" (click)="open('https://support.cypherpunk.com/hc')">
+      <div class="setting bottom-separator" (click)="open('https://cypherpunk.com/support')">
         <div class="icon external">Go to Help Center</div>
       </div>
 
